--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   
 <?php include('includes/header.php'); ?>
     
-      <h2>1stWebDesigner PHP Template</h2>
-    
-    <div id="nav">
+<?php include('includes/nav.php'); ?>
+
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Portfolio</a>
